# sensorbridge-meeting-suite

./: .gitignore  README.md
sensorbridge-microphone-windows/: .gitignore  README.md  bridge.py  pyproject.toml  run_windows.ps1
sensorbridge-microphone-windows/bridgeclient/: __init__.py  audio.py  client.py  endpoint_capture.py  errors.py  media_devices.py  microphone.py  microphone_feeder.py  models.py  transport.py  vbcable.py  webrtc_microphone.py
sensorbridge-microphone-windows/tests/: test_microphone_only.py
sensorbridge-windows-clean/: .gitignore  README.md  bridge.py  pyproject.toml  run_windows.ps1  sensorbridge.py
sensorbridge-windows-clean/bridgeclient/: __init__.py  camera_provider.py  client.py  directshow_camera.py  models.py  transport.py  video.py  video_sink.py  webrtc_receiver.py  windows_compat.py
sensorbridge-windows-clean/docs/: api.md  architecture.md  github.md  usbmux.md  webrtc-windows-receiver.md
sensorbridge-windows-clean/drivers/: README.md
sensorbridge-windows-clean/installer/: README.md  check-build-prereqs.ps1  check-system.ps1  install-dev.ps1  install-status.ps1  uninstall-dev.ps1
sensorbridge-windows-clean/static/: dashboard.html  dashboard.js  styles.css
sensorbridge-windows-clean/tests/: test_camera_only_product.py  test_camera_provider.py  test_directshow_camera.py  test_sensorbridge_args.py  test_transport.py  test_windows_compat.py
sensorbridge-windows-clean/tools/: Resolve-Python.ps1  directshow-camera-open-probe.ps1  directshow-device-probe.ps1  meeting-camera-acceptance.ps1  system_check.py  verify-dev.ps1
(+59 files in other folders)
