[project]
name = "sensorbridge-client"
version = "0.1.0"
description = "Windows-side prototype client for an iPhone SensorBridge service."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
py-modules = ["bridge", "sensorbridge"]
packages = ["bridgeclient"]

[project.optional-dependencies]
video = [
  "numpy>=1.24",
  "pyvirtualcam>=0.11",
]
webrtc = [
  "aiortc>=1.9",
]
dev = [
  "pytest>=8",
]

[tool.unittest]
start-directory = "tests"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
